--- a/css/cine.css
+++ b/css/cine.css
@@ -1,34 +1,35 @@
-body{
+body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 20px;
 }
 
-header{
+header {
     background-color: #303030;
     padding: 16px 0;
 }
-.logo{
+
+.logo {
     margin-left: 40px;
     height: 100px;
 }
 
-nav{
+nav {
     background-color: #aaf;
 }
 
-nav ul{
+nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
 }
 
-nav ul li{
+nav ul li {
     flex-grow: 1;
 }
 
-nav ul li a{
+nav ul li a {
     color: black;
     text-decoration: none;
     padding: 3px 6px;
@@ -36,16 +37,16 @@ nav ul li a{
     text-align: center;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     background-color: #4c76a5;
     color: black;
 }
 
-.carousel{
+.carousel {
     padding-top: 20px;
 }
 
-footer{
+footer {
     background-color: #252525;
     clear: both;
     text-align: center;
@@ -54,46 +55,49 @@ footer{
 
 }
 
-nav ul li a.activo{
+nav ul li a.activo {
     background-color: #4c76a5;
 }
 
-.holder{
+.holder {
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.holder-pelis{
+.holder-pelis {
     background-color: #252525;
 }
-.holder-footer{
+
+.holder-footer {
     background-color: #aaf;
     margin: 20px;
     padding: 10px;
 }
-.abc{
+
+.abc {
     max-width: 960px;
     margin: 0 auto;
 }
 
-.card{
+.card {
     padding: 90px;
 }
-.peliculas{
+
+.peliculas {
     display: flex;
     justify-content: space-between;
 }
 
-.pelicula{
+.pelicula {
     text-align: center;
     padding: 21px;
     box-sizing: border-box;
 }
 
 
-h6{
+h6 {
     width: 270px;
     text-align: center;
-    background-color: #425223;
-   overflow: hidden;
+    background-color: #aaf;
+    overflow: hidden;
 }
