--- a/css/candy.css
+++ b/css/candy.css
@@ -1,71 +1,9 @@
-body{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-header{
-    background-color: #303030;
-    padding: 16px 0;
-}
-.logo{
-    margin-left: 40px;
-    height: 100px;
-}
-
-nav{
-    background-color: #aaf;
-}
-
-nav ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-nav ul li{
-    flex-grow: 1;
-}
-
-nav ul li a{
-    color: black;
-    text-decoration: none;
-    padding: 3px 6px;
-    display: block;
-    text-align: center;
-}
-
-nav ul li a:hover{
-    background-color: #4c76a5;
-    color: black;
-}
-
-.carousel{
-    padding-top: 20px;
-}
-
-footer{
-    background-color: #252525;
-    clear: both;
-    text-align: center;
-    padding: 5px 0;
-    font-size: 20px;
-
-}
-
-nav ul li a.activo{
-    background-color: #4c76a5;
-}
 
 .holder{
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.holder-pelis{
-    background-color: #252525;
-}
 .holder-footer{
     background-color: #aaf;
     margin: 20px;
@@ -76,24 +14,10 @@ nav ul li a.activo{
     margin: 0 auto;
 }
 
-.card{
-    padding: 90px;
-}
-.peliculas{
-    display: flex;
-    justify-content: space-between;
+.form-control{
+    width: 400px !important;
 }
 
-.pelicula{
-    text-align: center;
-    padding: 21px;
-    box-sizing: border-box;
-}
-
-
-h6{
-    width: 270px;
-    text-align: center;
-    background-color: #425223;
-   overflow: hidden;
+form{
+    margin-top: 45px !important;
 }
