probando cosas con js

--- a/css/cine.css
+++ b/css/cine.css
@@ -107,3 +107,11 @@ h6 {
     overflow: hidden;
     font-size: 17px !important;
 }
+
+.alternar {
+    background: lightblue !important;
+}
+
+.alternar.activo {
+    background: blue;
+}
